--- a/src/main/deploy/bindings.properties
+++ b/src/main/deploy/bindings.properties
@@ -31,7 +31,7 @@ RotationVelocity: Rotate
 Speed: Slider
 ToggleFieldOriented: 3-Pressed
 Forward: 1
-
+RecordOffset: 4
 
 # Gunner Stick
 PivotUp: Y
